Fix top border radius with overflow:hidden

--- a/style.css
+++ b/style.css
@@ -30,12 +30,11 @@ main {
     max-width: 350px;
     text-align: center;
     margin: auto;
+    overflow: hidden;
 }
 
 .hero {
     max-width: 100%;
-    border-top-left-radius: 1em;
-    border-top-right-radius: 1em;
 }
 
 .text {
@@ -57,6 +56,7 @@ main {
 }
 
 h1 {
+    font-size: 1.25rem;
     font-weight: 900;
     padding-top: 1em;
     letter-spacing: .05em;
@@ -64,6 +64,7 @@ h1 {
 }
 
 h2 {
+    font-size: 1rem;
     font-weight: 700;
     color: hsl(223, 47%, 23%);
 }
